--- a/src/index.css
+++ b/src/index.css
@@ -117,4 +117,8 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    @apply scroll-m-20 text-center text-4xl font-extrabold tracking-tight text-balance;
+  }
 }
